test/extern/ferguson/c-array/c-array-bad-coercion.good
c-array-bad-coercion.chpl:6: In function 'main':
c-array-bad-coercion.chpl:9: error: unresolved call 'f(c_array(int(64),2))'
c-array-bad-coercion.chpl:2: note: this candidate did not match: f(ptr: c_ptr(real))
c-array-bad-coercion.chpl:9: note: because call actual argument #1 with type c_array(int(64),2)
c-array-bad-coercion.chpl:2: note: is passed to formal 'ptr: c_ptr(real(64))'
